Fix stuck :hover state issue; add indicator when a draggable has been clicked

--- a/tabbycat/templates/scss/modules/drag-and-drop.scss
+++ b/tabbycat/templates/scss/modules/drag-and-drop.scss
@@ -12,6 +12,10 @@
   -khtml-user-drag: element;
   -webkit-user-drag: element;
   user-select: none; // Text should be unselectable or highlights go crazy
+  background: #fff; // Need to override default :hover bg state that gets stuck
+  &:active {
+    top: 2px;
+  }
   &:hover {
     cursor: move;
   }
